# iskrajs-rust-template

./: Cargo.toml  Embed.toml  build.rs  cargo-generate.toml  load.sh  memory.x  readme.md  readme_ru.md
src/: main.rs
